turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:72: error: type mismatch;
 found   : String("R")
 required: Int
  rule(0)(0) = Array(1, "R", 0)
                        ^